data_exploration - updating paths

--- a/data_exploration_spanish.ipynb
+++ b/data_exploration_spanish.ipynb
@@ -231,7 +231,7 @@
     }
    ],
    "source": [
-    "df1_train = pd.read_excel('../data/Spanish_GitHub/train.xlsx', index_col=0)\n",
+    "df1_train = pd.read_excel('data/Spanish_GitHub/train.xlsx', index_col=0)\n",
     "df1_train"
    ]
   },
@@ -449,7 +449,7 @@
     }
    ],
    "source": [
-    "df1_test = pd.read_excel('../data/Spanish_GitHub/test.xlsx', index_col=0)\n",
+    "df1_test = pd.read_excel('data/Spanish_GitHub/test.xlsx', index_col=0)\n",
     "df1_test"
    ]
   },
@@ -673,7 +673,7 @@
     }
    ],
    "source": [
-    "df2_train = pd.read_csv('../data/Spanish_Kaggle/train.csv')\n",
+    "df2_train = pd.read_csv('data/Spanish_Kaggle/train.csv')\n",
     "df2_train"
    ]
   },
@@ -830,7 +830,7 @@
     }
    ],
    "source": [
-    "df2_test = pd.read_csv('../data/Spanish_Kaggle/test.csv')\n",
+    "df2_test = pd.read_csv('data/Spanish_Kaggle/test.csv')\n",
     "df2_test"
    ]
   },
@@ -1361,7 +1361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merge.to_csv('../data/Merged/spanish_dataset.csv', index = False)"
+    "merge.to_csv('data/Merged/spanish_dataset.csv', index = False)"
    ]
   },
   {
@@ -1396,57 +1396,57 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>RAE INCLUIRÁ LA PALABRA \"LADY\" EN EL DICCIONAR...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>La palabra \"haiga\", aceptada por la RAE La Rea...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>YORDI ROSADO ESCRIBIRÁ Y DISEÑARÁ LOS NUEVOS L...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>UNAM capacitará a maestros para aprobar prueba...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>Alerta: pretenden aprobar libros escolares con...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>...</td>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2566</td>\n",
+       "      <th>2566</th>\n",
        "      <td>Recuperamos la historia de Aleixandra, la jove...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2567</td>\n",
+       "      <th>2567</th>\n",
        "      <td>Reproches, tensión y sinceridad: la comida en ...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2568</td>\n",
+       "      <th>2568</th>\n",
        "      <td>RT @ElMundoOpinion: \"PSOE, PP, Ciudadanos y Vo...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2569</td>\n",
+       "      <th>2569</th>\n",
        "      <td>Rusia cita al embajador español por unas decla...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2570</td>\n",
+       "      <th>2570</th>\n",
        "      <td>Saeed Malekpour fue detenido en 2008, cuando v...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -1478,7 +1478,7 @@
     }
    ],
    "source": [
-    "dataset = pd.read_csv('../data/Merged/spanish_dataset.csv')\n",
+    "dataset = pd.read_csv('data/Merged/spanish_dataset.csv')\n",
     "dataset"
    ]
   },
