--- a/main.ipynb
+++ b/main.ipynb
@@ -1542,7 +1542,7 @@
     }
    ],
    "source": [
-    "df # dataset with normalized news, without stopwords and with stemming applied"
+    "df # dataset with normalized news, without stopwords and applying stemming"
    ]
   },
   {
@@ -1625,7 +1625,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "random_seed = 2 # set random seed for consistency and reproducibility of results\n",
+    "random_seed = 2 # set random seed for results consistency and reproducibility\n",
     "test_size = 0.1 # test set\n",
     "dev_size = 0.1 # development (validation) set\n",
     "iterations = 5"
@@ -2307,13 +2307,6 @@
     "plot_utils.plot_learning_curve(estimator, estimator.__class__.__name__, X_transformed_train, Y_train, \n",
     "                   cv = cv, scoring = make_scorer(accuracy_score), ylim = (0,1.1))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
